UtahLiveDataTest/src/objects/FINETBatchScheduleParent__c.object
<CustomObject>
    <fields>
        <fullName>BatchErrors__c</fullName>
        <label>BatchErrors</label>
        <summarizedField>FINETBatchScheduleChild__c.ErrorCount__c</summarizedField>
        <summaryForeignKey>FINETBatchScheduleChild__c.FINETBatchScheduleParent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BatchLog__c</fullName>
        <label>BatchLog</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChildCount__c</fullName>
        <label>ChildCount</label>
        <summaryForeignKey>FINETBatchScheduleChild__c.FINETBatchScheduleParent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChildOrder__c</fullName>
        <label>ChildOrder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-r_unit__c-IntegUtahUnitRequestBatch</fullName>
                </value>
                <value>
                    <fullName>2-r_fund__c-IntegUtahFundRequestBatch</fullName>
                </value>
                <value>
                    <fullName>3-r_appr__c-IntegUtahAppropriationRequestBatch</fullName>
                </value>
                <value>
                    <fullName>4-r_obj__c-IntegUtahObjectRequestBatch</fullName>
                </value>
                <value>
                    <fullName>5-r_pgrp__c-IntegUtahProgramGroupRequestBatch</fullName>
                </value>
                <value>
                    <fullName>6-r_ptype__c-IntegUtahProgramTypeRequestBatch</fullName>
                </value>
                <value>
                    <fullName>7-r_pcls__c-IntegUtahProgramClassRequestBatch</fullName>
                </value>
                <value>
                    <fullName>8-r_pcat__c-IntegUtahProgramCategoryRequestBatch</fullName>
                </value>
                <value>
                    <fullName>9-r_mjr_prog__c-IntegUtahMajorProgramRequestBatch</fullName>
                </value>
                <value>
                    <fullName>10-r_fprfl__c-IntegUtahFundingInferenceRequestBatch</fullName>
                </value>
                <value>
                    <fullName>12-vend_cust__c-IntegUtahVendorRequestBatch</fullName>
                </value>
                <value>
                    <fullName>13-r_ad-IntegUtahAddressRequestBatch</fullName>
                </value>
                <value>
                    <fullName>11-r_prog__c-IntegUtahProgramRequestBatch</fullName>
                    <isActive>false</isActive>
                    <label>11-r_prog__c-IntegUtahProgramRequestBatch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FINET Batch Schedule Parent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FBSPN-{0}1</displayFormat>
        <label>FINET Batch Schedule Parent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FINET Batch Schedule Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>